--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- ini htmlnya -->
 
 <!DOCTYPE html>
-<html lang="en">
+<ht lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,4 +17,4 @@
     <!-- Footer -->
     <footer></footer>
   </body>
-</html>
+</ht
