--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <button id="hitung-luas">Hitung</button>
         </header>
         <!-- Gambar Luas -->
-        <div class="section-image"></div>
+        <div class="section-image-persegi"></div>
         <!-- Konten ngitung -->
         <div class="calculate-content">
           <p class="hasil" id="hasil-luas"></p>
@@ -80,7 +80,7 @@
           <button id="hitung-keliling">Hitung</button>
         </header>
         <!-- Gambar Keliling -->
-        <div class="section-image"></div>
+        <div class="section-image-persegi"></div>
         <!-- Konten ngitung -->
         <div class="calculate-content">
           <p class="hasil" id="hasil-keliling"></p>
@@ -101,7 +101,7 @@
           <button id="hitung-luas-pp">Hitung</button>
         </header>
         <!-- Gambar Luas -->
-        <div class="section-image"></div>
+        <div class="section-image-persegi-panjang"></div>
         <!-- Konten ngitung -->
         <div class="calculate-content">
           <p class="hasil" id="hasil-luas-persegi-panjang"></p>
@@ -128,7 +128,7 @@
           <button id="hitung-keliling-pp">Hitung</button>
         </header>
         <!-- Gambar Keliling -->
-        <div class="section-image"></div>
+        <div class="section-image-persegi-panjang"></div>
         <!-- Konten ngitung -->
         <div class="calculate-content">
           <p class="hasil" id="hasil-keliling-persegi-panjang"></p>
