--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             placeholder="Masukkan panjang sisi"
           />
           <button id="hitung-luas">Hitung</button>
+          <button id="reset-luas">Reset</button>
         </header>
         <!-- Gambar Luas -->
         <div class="section-image-persegi"></div>
@@ -78,6 +79,7 @@
             placeholder="Masukkan panjang sisi"
           />
           <button id="hitung-keliling">Hitung</button>
+          <button id="reset-keliling">Reset</button>
         </header>
         <!-- Gambar Keliling -->
         <div class="section-image-persegi"></div>
@@ -99,6 +101,7 @@
           <label for="lebar">Masukkan lebar:</label>
           <input type="number" id="lebar" placeholder="Masukkan lebar" />
           <button id="hitung-luas-pp">Hitung</button>
+          <button id="reset-luas-pp">Reset</button>
         </header>
         <!-- Gambar Luas -->
         <div class="section-image-persegi-panjang"></div>
@@ -126,6 +129,7 @@
             placeholder="Masukkan lebar"
           />
           <button id="hitung-keliling-pp">Hitung</button>
+          <button id="reset-keliling-pp">Reset</button>
         </header>
         <!-- Gambar Keliling -->
         <div class="section-image-persegi-panjang"></div>
